div content buttons added to me1100

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -111,9 +111,25 @@ p
 </tr>
 </table><br>
 
+<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+<tr><td width=100%>
+<h3> Questions?</h3>
+	<ul>
+		<li> Instructors' discussion hours*: 
+			  <ul> <li> Batch I: Wednesday 4-5 PM, Raman 101 </li>
+			 <li> Batch II: Wednesday 4-5 PM, Raman 102 </li>
+		</ul></li>
+		<li> TA discussion hours: 
+			<ul> <li> Batch I: Thursday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> Seminar room</li>  
+				<li> Batch II: Thursday 4-5 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank">TDCE</a>  Seminar room</li>   </li> </ul>
+		</li></ul>
+	    *<i>If outside of these time slots, please send an email and confirm our presence before dropping by</i>
+</td></tr>
+</table>
+<br>
 
-<!-- <button class="collapsible"><h5>View more course info</h5></button> 
-<div class="content"> -->
+<button class="collapsible"><h5>View complete course info</h5></button> 
+<div class="content">
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr><td width="50%">
 <h3> Batch Info:</h3>
@@ -132,7 +148,7 @@ Email: varuns@iitm.ac.in </li>
 
 <h3> Teaching Assistants: </h3>
 	    <ul> <li> Batch I: Ibrahim, Nivethana Kumar</li>
-		     <li> Batch II: Praise Noah Johnson  </li> </ul>
+		     <li> Batch II: Praise Noah Johnson  </li> </ul>  
 
 <h3> Learning Outcomes: </h3>
 	<ul> <li> Formulation of system or control volume type analysis in practical energy conversion problems and apply energy/ mass balances correctly. </li>
@@ -140,9 +156,8 @@ Email: varuns@iitm.ac.in </li>
 		<li> Estimation of property changes in substances through appropriate property relationships or property tables </li>
 		<li> Evaluation of the ideal and actual performance characteristics for various devices/processes  by applying I and II laws of Thermodynamics. </li>
 	</ul>
-  
 </td>
-
+	
 <td width="50%"> 
 <h3> General information: </h3>
 <ul> <li> 10 credit core course </li>
@@ -178,7 +193,8 @@ Email: varuns@iitm.ac.in </li>
 </td>
 </tr>
 </table>
-<br>
+</div>
+<br><br>
 
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%">
@@ -231,7 +247,8 @@ Updates/Announcements:</font></h3>
 
 <center><i> Quiz-I roughly around this time </i></center>
 
-<h3>Module 3: Pure substances </h3>
+<button class="collapsible"><h5>Module 3: Pure substances </h5></button> 
+<div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -239,9 +256,13 @@ Updates/Announcements:</font></h3>
 	<tr> <td> Water-steam system  </td> <td> </td> 
 	<tr> <td> Use of steam and R134a tables </td> <td> </td> 
 	</tr>
-</table><br>
+</table>
+</div>
+<br><br>
 
-<h3>Module 4: First law of thermodynamics for flow processes </h3>
+<button class="collapsible"><h5>Module 4: First law of thermodynamics for flow processes  </h5></button> 
+<div class="content">
+<!-- <h3>Module 4: First law of thermodynamics for flow processes </h3> -->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -250,10 +271,13 @@ Updates/Announcements:</font></h3>
 	<tr> <td> Unsteady flow processes </td> <td> </td>
 	</tr>
 </table><br>
-
 <center><i> Quiz-II roughly around this time </i></center>
+</div>
+<br><br>
 
-<h3>Module 5: Second law for heat engines </h3>
+<button class="collapsible"><h5>Module 5: Second law for heat engines</h5></button> 
+<div class="content">
+<!--<h3>Module 5: Second law for heat engines </h3>-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -262,20 +286,26 @@ Updates/Announcements:</font></h3>
 	<tr> <td> Reversible processes, internal and external irreversiblity</td> <td> </td> 
 	<tr> <td> Carnot cycle, Absolute temperature scale</td> <td> </td> 
 	</tr>
-</table><br>
+</table>
+</div>
+<br><br>
 
-
-<h3>Module 6: Second law for processes </h3>
+<button class="collapsible"><h5>Module 6: Second law for processes</h5></button> 
+<div class="content">
+<!--<h3>Module 6: Second law for processes </h3>-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
 	<tr> <td> Entropy change for processes </td> <td> </td>
 	<tr> <td> Isentropic efficiency, Irreversibilty </td> <td> </td> 
 	</tr>
-</table><br>
+</table>
+</div>
+<br><br>
 
-
-<h3>Module 7: Thermodynamic cycles </h3>
+<button class="collapsible"><h5>Module 7: Thermodynamic cycles</h5></button> 
+<div class="content">
+<!--<h3>Module 7: Thermodynamic cycles </h3>-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -283,10 +313,11 @@ Updates/Announcements:</font></h3>
 	<tr> <td> Brayton cycle </td> <td> </td> 
 	<tr> <td> Vapor compression cycle </td> <td> </td> 
 	</tr>
-</table><br>
-
+</table>
 <center><i>End-semester exam at this stage<i></center>
-	
+</div>
+<br><br>
+
 <script>
 var coll = document.getElementsByClassName("collapsible");
 var i;
