edit layout me1100

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -200,6 +200,8 @@ Email: varuns@iitm.ac.in </li>
 <tr> <td width="100%">
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
+<button class="collapsible"><h5>View older announcements</h5></button> 
+<div class="content">
 <ul>
 	<li> 23/7: Welcome to ME1100! 
 		<ul><li>We start our instruction on August 1st. Check the time and venue above. 
@@ -207,6 +209,9 @@ Updates/Announcements:</font></h3>
 		</ul>
 	</li>
 	<li> 7/8: Discussion hours edited for Batch I and II (Instructors, TAs) </li>
+</ul>
+</div>
+<ul>
 	<li> <font color="lightgreen">9/8: Practice problems on fundamentals added (see header of Module 1, better viewed upon downloading)</font> </li>
 </ul>
 </div>
