--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -199,8 +199,7 @@ Email: varuns@iitm.ac.in </li>
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%">
 <h3> <font color="pink">
-Updates/Announcements:</font></h3>
-<button class="collapsible"><h5>View older announcements</h5></button> 
+Updates/Announcements:</font> <button class="collapsible">View older announcements</h3></button> 
 <div class="content">
 <ul>
 	<li> 23/7: Welcome to ME1100! 
