--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -200,20 +200,20 @@ Email: varuns@iitm.ac.in </li>
 <tr> <td width="100%">
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
+<ul>
+	<li>9/8: Practice problems on fundamentals added (see header of Module 1, better viewed upon downloading) </li>
+</ul>
 <button class="collapsible"><h5>View older announcements</h5></button> 
 <div class="content">
 <ul>
+	<li> 7/8: Discussion hours edited for Batch I and II (Instructors, TAs) </li>
 	<li> 23/7: Welcome to ME1100! 
 		<ul><li>We start our instruction on August 1st. Check the time and venue above. 
 			<li>Make sure you have signed up on <a href="https://courses.iitm.ac.in">Moodle</a>. Tutorials/Handouts will be made available through this platform.
 		</ul>
 	</li>
-	<li> 7/8: Discussion hours edited for Batch I and II (Instructors, TAs) </li>
 </ul>
 </div>
-<ul>
-	<li> <font color="lightgreen">9/8: Practice problems on fundamentals added (see header of Module 1, better viewed upon downloading)</font> </li>
-</ul>
 </div>
 </td></tr>
 </table><br>
