Website me1100 moved to varun page

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -91,7 +91,8 @@ p
 </head>
 
 <body bgcolor = "black">
-
+	Website moved <a href="https://home.iitm.ac.in/varuns/ME1100_Jul_Nov_2019.html">here</a>
+<!--
 <table border="0" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td><center> <h2> ME1100: Thermodynamics </h2></td>
 <tr> <td><center> <h2> Jul-Nov 2019</h2> </center></td> </tr>
@@ -201,6 +202,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
+	<li>24/8: Practice problems on work added (see header of Module 1, better viewed upon downloading) </li>
 	<li>9/8: Practice problems on fundamentals added (see header of Module 1, better viewed upon downloading) </li>
 </ul>
 <button class="collapsible"><h5>View older announcements</h5></button> 
@@ -219,7 +221,7 @@ Updates/Announcements:</font></h3>
 </table><br>
 
 <br><br>
-<!-- <p><font color="lightgreen"><i>SE: Solved Example; PS: Problem Sheet</i></font></p> -->
+<!-<p><font color="lightgreen"><i>SE: Solved Example; PS: Problem Sheet</i></font></p> 
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -267,7 +269,7 @@ Updates/Announcements:</font></h3>
 
 <button class="collapsible"><h5>Module 4: First law of thermodynamics for flow processes  </h5></button> 
 <div class="content">
-<!-- <h3>Module 4: First law of thermodynamics for flow processes </h3> -->
+<!- <h3>Module 4: First law of thermodynamics for flow processes </h3> 
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -282,7 +284,7 @@ Updates/Announcements:</font></h3>
 
 <button class="collapsible"><h5>Module 5: Second law for heat engines</h5></button> 
 <div class="content">
-<!--<h3>Module 5: Second law for heat engines </h3>-->
+<!-<h3>Module 5: Second law for heat engines </h3>--
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -297,7 +299,7 @@ Updates/Announcements:</font></h3>
 
 <button class="collapsible"><h5>Module 6: Second law for processes</h5></button> 
 <div class="content">
-<!--<h3>Module 6: Second law for processes </h3>-->
+<!-<h3>Module 6: Second law for processes </h3>->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -310,7 +312,7 @@ Updates/Announcements:</font></h3>
 
 <button class="collapsible"><h5>Module 7: Thermodynamic cycles</h5></button> 
 <div class="content">
-<!--<h3>Module 7: Thermodynamic cycles </h3>-->
+<!-<h3>Module 7: Thermodynamic cycles </h3>->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -339,5 +341,6 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
+-->
 
 </body></html>
