resume website update

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -91,8 +91,8 @@ p
 </head>
 
 <body bgcolor = "black">
-	Website moved <a href="https://home.iitm.ac.in/varuns/ME1100_Jul_Nov_2019.html">here</a>
-<!--
+	<!-- Website moved <a href="https://home.iitm.ac.in/varuns/ME1100_Jul_Nov_2019.html">here</a> -->
+
 <table border="0" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td><center> <h2> ME1100: Thermodynamics </h2></td>
 <tr> <td><center> <h2> Jul-Nov 2019</h2> </center></td> </tr>
@@ -231,7 +231,7 @@ Updates/Announcements:</font></h3>
 </table>
 <br>
 
-<h3>Module 1: Fundamental concepts <a href="https://owncloud.iitm.ac.in/index.php/s/q9rrBasyeTmZwa7" target="_blank">Practice problems</a> </h3>
+<h3>Module 1: Fundamental concepts <a href="https://owncloud.iitm.ac.in/index.php/s/ELd32wS2DbPo2t5" target="_blank">Practice problems</a> </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -341,6 +341,5 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
--->
 
 </body></html>
