addign lecture summary

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,12 +202,13 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
+	<li>10/9: Lecture summary for Modules 1, 2, and 3 (in progress) added</li>
 	<li>24/8: Practice problems on work added (see header of Module 1, better viewed upon downloading) </li>
-	<li>9/8: Practice problems on fundamentals added (see header of Module 1, better viewed upon downloading) </li>
 </ul>
 <button class="collapsible"><h5>View older announcements</h5></button> 
 <div class="content">
 <ul>
+	<li> 9/8: Practice problems on fundamentals added (see header of Module 1, better viewed upon downloading) </li>
 	<li> 7/8: Discussion hours edited for Batch I and II (Instructors, TAs) </li>
 	<li> 23/7: Welcome to ME1100! 
 		<ul><li>We start our instruction on August 1st. Check the time and venue above. 
@@ -221,7 +222,7 @@ Updates/Announcements:</font></h3>
 </table><br>
 
 <br><br>
-<!-<p><font color="lightgreen"><i>SE: Solved Example; PS: Problem Sheet</i></font></p> 
+<!--<p><font color="lightgreen"><i>SE: Solved Example; PS: Problem Sheet</i></font></p> -->
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -231,7 +232,7 @@ Updates/Announcements:</font></h3>
 </table>
 <br>
 
-<h3>Module 1: Fundamental concepts <a href="https://owncloud.iitm.ac.in/index.php/s/ELd32wS2DbPo2t5" target="_blank">Practice problems</a> </h3>
+<h3>Module 1: Fundamental concepts <a href="https://owncloud.iitm.ac.in/index.php/s/EKMbpOk12WgwQjU" target="_blank">Lecture Summary</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/ELd32wS2DbPo2t5" target="_blank">Practice problems</a> </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -243,7 +244,7 @@ Updates/Announcements:</font></h3>
 </table>
 <br>
 
-<h3>Module 2: First law of thermodynamics for a system</h3>
+<h3>Module 2: First law of thermodynamics for a system <a href="https://owncloud.iitm.ac.in/index.php/s/XYLjauE7T3GJlR0" target="_blank">Lecture Summary</a></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -254,8 +255,7 @@ Updates/Announcements:</font></h3>
 
 <center><i> Quiz-I roughly around this time </i></center>
 
-<button class="collapsible"><h5>Module 3: Pure substances </h5></button> 
-<div class="content">
+<h3>Module 3: Pure substances <a href="https://owncloud.iitm.ac.in/index.php/s/f9e5SwQA4Cfc6IF" target="_blank">Lecture Summary</a></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -264,7 +264,6 @@ Updates/Announcements:</font></h3>
 	<tr> <td> Use of steam and R134a tables </td> <td> </td> 
 	</tr>
 </table>
-</div>
 <br><br>
 
 <button class="collapsible"><h5>Module 4: First law of thermodynamics for flow processes  </h5></button> 
