message for module 3

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,6 +202,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
+	<li>13/9: Lecture summary for Module 3 (upto ideal gas and mixtures) updated</li>
 	<li>10/9: Lecture summary for Modules 1, 2, and 3 (in progress) added</li>
 	<li>24/8: Practice problems on work added (see header of Module 1, better viewed upon downloading) </li>
 </ul>
