CB reading, extra problems

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,6 +202,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
+	<li>17/9: Practice problems on first law added (see header of Module 2), reading from CB added for Module 3 </li>
 	<li>13/9: Lecture summary for Module 3 (upto ideal gas and mixtures) updated</li>
 	<li>10/9: Lecture summary for Modules 1, 2, and 3 (in progress) added</li>
 	<li>24/8: Practice problems on work added (see header of Module 1, better viewed upon downloading) </li>
@@ -245,7 +246,7 @@ Updates/Announcements:</font></h3>
 </table>
 <br>
 
-<h3>Module 2: First law of thermodynamics for a system <a href="https://owncloud.iitm.ac.in/index.php/s/XYLjauE7T3GJlR0" target="_blank">Lecture Summary</a></h3>
+<h3>Module 2: First law of thermodynamics for a system <a href="https://owncloud.iitm.ac.in/index.php/s/XYLjauE7T3GJlR0" target="_blank">Lecture Summary</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/UdUX6wvnOGRqUKI">Practice problems</a></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -260,16 +261,16 @@ Updates/Announcements:</font></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
-	<tr> <td> Ideal gases and mixtures </td> <td> </td> 
-	<tr> <td> Water-steam system  </td> <td> </td> 
-	<tr> <td> Use of steam and R134a tables </td> <td> </td> 
+	<tr> <td> Ideal gases and mixtures </td> <td> CB $3-6, CB $13-1--$13-3</td> 
+	<tr> <td> Water-steam system  </td> <td> CB $3-1--3-4 </td> 
+	<tr> <td> Use of steam and R134a tables </td> <td> CB $3-5 </td> 
 	</tr>
 </table>
 <br><br>
 
 <button class="collapsible"><h5>Module 4: First law of thermodynamics for flow processes  </h5></button> 
 <div class="content">
-<!- <h3>Module 4: First law of thermodynamics for flow processes </h3> 
+<!-- <h3>Module 4: First law of thermodynamics for flow processes </h3> -->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
