--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,18 +202,19 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
+	<li>24/9: Module 3: Lecture summary updated
+</ul>
+<button class="collapsible"><h5>View older announcements</h5></button> 
+<div class="content">
+<ul>
 	<li>17/9: Module 3: reading from CB added, lecture summary updated
 	<li>17/9: Practice problems on first law added (see header of Module 2) </li>
 	<li>13/9: Lecture summary for Module 3 (upto ideal gas and mixtures) updated</li>
 	<li>10/9: Lecture summary for Modules 1, 2, and 3 (in progress) added</li>
 	<li>24/8: Practice problems on work added (see header of Module 1, better viewed upon downloading) </li>
-</ul>
-<button class="collapsible"><h5>View older announcements</h5></button> 
-<div class="content">
-<ul>
-	<li> 9/8: Practice problems on fundamentals added (see header of Module 1, better viewed upon downloading) </li>
-	<li> 7/8: Discussion hours edited for Batch I and II (Instructors, TAs) </li>
-	<li> 23/7: Welcome to ME1100! 
+	<li>9/8: Practice problems on fundamentals added (see header of Module 1, better viewed upon downloading) </li>
+	<li>7/8: Discussion hours edited for Batch I and II (Instructors, TAs) </li>
+	<li>23/7: Welcome to ME1100! 
 		<ul><li>We start our instruction on August 1st. Check the time and venue above. 
 			<li>Make sure you have signed up on <a href="https://courses.iitm.ac.in">Moodle</a>. Tutorials/Handouts will be made available through this platform.
 		</ul>
