--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,6 +202,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
+	<li>24/9: Practice problems on ideal gas and mixtures added
 	<li>24/9: Module 3: Lecture summary updated
 </ul>
 <button class="collapsible"><h5>View older announcements</h5></button> 
@@ -259,7 +260,7 @@ Updates/Announcements:</font></h3>
 
 <center><i> Quiz-I roughly around this time </i></center>
 
-<h3>Module 3: Pure substances <a href="https://owncloud.iitm.ac.in/index.php/s/f9e5SwQA4Cfc6IF" target="_blank">Lecture Summary</a></h3>
+<h3>Module 3: Pure substances <a href="https://owncloud.iitm.ac.in/index.php/s/f9e5SwQA4Cfc6IF" target="_blank">Lecture Summary</a></h3>, <a href="https://owncloud.iitm.ac.in/index.php/s/7Num6ynUvWYeB8o" target="_blank">Practice problems</a></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
