--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -260,7 +260,7 @@ Updates/Announcements:</font></h3>
 
 <center><i> Quiz-I roughly around this time </i></center>
 
-<h3>Module 3: Pure substances <a href="https://owncloud.iitm.ac.in/index.php/s/f9e5SwQA4Cfc6IF" target="_blank">Lecture Summary</a></h3>, <a href="https://owncloud.iitm.ac.in/index.php/s/7Num6ynUvWYeB8o" target="_blank">Practice problems</a></h3>
+<h3>Module 3: Pure substances <a href="https://owncloud.iitm.ac.in/index.php/s/f9e5SwQA4Cfc6IF" target="_blank">Lecture Summary</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/7Num6ynUvWYeB8o" target="_blank">Practice problems</a></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
