adding module4 notes

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,6 +202,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
+	<li>26/9: Module 4: Lecture summary added
 	<li>24/9: Practice problems on ideal gas and mixtures added
 	<li>24/9: Module 3: Lecture summary updated
 </ul>
@@ -271,19 +272,21 @@ Updates/Announcements:</font></h3>
 </table>
 <br><br>
 
-<button class="collapsible"><h5>Module 4: First law of thermodynamics for flow processes  </h5></button> 
-<div class="content">
-<!-- <h3>Module 4: First law of thermodynamics for flow processes </h3> -->
+<!-- <button class="collapsible"> 
+<h5>Module 4: First law of thermodynamics for flow processes  </h3> 
+</button> 
+<div class="content"> -->
+<h3>Module 4: First law of thermodynamics for flow processes  <a href="https://owncloud.iitm.ac.in/index.php/s/2S1EKgnyf1xZcxc" target="_blank">Lecture Summary</a> </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
+	<tr> <td> Application of I law to control volumes </td> <td> </td> 
 	<tr> <td> Steady flow processes </td> <td> </td> 
-	<tr> <td> Steady flow devices </td> <td> </td> 
 	<tr> <td> Unsteady flow processes </td> <td> </td>
 	</tr>
 </table><br>
 <center><i> Quiz-II roughly around this time </i></center>
-</div>
+<!-- ></div>-->
 <br><br>
 
 <button class="collapsible"><h5>Module 5: Second law for heat engines</h5></button> 
