adding module4 notes

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -280,9 +280,9 @@ Updates/Announcements:</font></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
-	<tr> <td> Application of I law to control volumes </td> <td> </td> 
-	<tr> <td> Steady flow processes </td> <td> </td> 
-	<tr> <td> Unsteady flow processes </td> <td> </td>
+	<tr> <td> I law for control volumes </td> <td>CB $5-1--$5-3</td> 
+	<tr> <td> Steady flow processes in devices </td> <td> CB $5-4</td> 
+	<tr> <td> Unsteady flow processes </td> <td> CB $5-5 </td>
 	</tr>
 </table><br>
 <center><i> Quiz-II roughly around this time </i></center>
