adding module4 notes

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,7 +202,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
-	<li>26/9: Module 4: Lecture summary added
+	<li>26/9: Module 4: Lecture summary, reading from CB added
 	<li>24/9: Practice problems on ideal gas and mixtures added
 	<li>24/9: Module 3: Lecture summary updated
 </ul>
