module 4 update message

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,13 +202,14 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
+	<li>30/9: Module 4: Lecture summary complete
 	<li>26/9: Module 4: Lecture summary, reading from CB added
-	<li>24/9: Practice problems on ideal gas and mixtures added
-	<li>24/9: Module 3: Lecture summary updated
 </ul>
 <button class="collapsible"><h5>View older announcements</h5></button> 
 <div class="content">
 <ul>
+	<li>24/9: Practice problems on ideal gas and mixtures added
+	<li>24/9: Module 3: Lecture summary updated
 	<li>17/9: Module 3: reading from CB added, lecture summary updated
 	<li>17/9: Practice problems on first law added (see header of Module 2) </li>
 	<li>13/9: Lecture summary for Module 3 (upto ideal gas and mixtures) updated</li>
