--- a/logger/books.html
+++ b/logger/books.html
@@ -36,7 +36,8 @@ table, th, td {
 <body bgcolor = "black">
 <center><h2>List of interesting books</h2></center>
 	
-I am no avid reader, but here is a list of (non-fiction) books that I have read/am reading. I hope to continue to fill this space with interesting volumes as time goes by.<br><br><br>
+I am no avid reader, but here is a partial list of books that I have read/am reading. I hope to continue to fill this space with interesting volumes as time goes by. If interested in borrowing a copy of the book, please get in touch. 
+<br><br><br>
 
 
 Auto-biography: 
@@ -49,6 +50,14 @@ General:
 <ul> 
 <li> Deep Thinking, Garry Kasparov</li>
 <li> Phantoms in the brain, V. S. Ramachandran and Sandra Blakeslee</li>
+</ul>
+
+Fiction:
+<ul> 
+<li> The Immortals of Meluha, Amish Tripathi </li>
+<li> The Secret of Nagas, Amish Tripathi </li>
+<li> The Oath of Vayuputras, Amish Tripathi </li>
+<li> The Complete Sherlock Holmes, Arthur Canon Doyle </li>
 </ul>
 
 </body></html>
