--- a/logger/books.html
+++ b/logger/books.html
@@ -36,7 +36,7 @@ table, th, td {
 <body bgcolor = "black">
 <center><h2>List of interesting books</h2></center>
 	
-I am no avid reader, but here is a non-exhaustive list of books that I have read/am reading. I hope to continue to fill this space with interesting volumes as time goes by. If interested in borrowing a copy of the book, please get in touch. 
+I am no avid reader, but here is a non-exhaustive list of books that I have read/am reading. I hope to continue to fill this space with interesting volumes as time goes by. If interested in borrowing a copy of any of these books, please get in touch. 
 <br><br><br>
 
 
