--- a/logger/books.html
+++ b/logger/books.html
@@ -36,7 +36,7 @@ table, th, td {
 <body bgcolor = "black">
 <center><h2>List of interesting books</h2></center>
 	
-I am no avid reader, but here is a non-exhaustive list of books that I have read/am reading. I hope to continue to fill this space with interesting volumes as time goes by. If interested in borrowing a copy of any of these books, please get in touch. 
+I am no avid reader, but here is a non-exhaustive list of books that I have read recently/am reading currently. I hope to continue to fill this space with interesting volumes as time goes by. If interested in borrowing a copy of any of these books, please get in touch. 
 <br><br><br>
 
 
@@ -46,18 +46,18 @@ Auto-biography:
 </ul>
 <br>
 
-General: 
-<ul> 
-<li> Deep Thinking, Garry Kasparov</li>
-<li> Phantoms in the brain, V. S. Ramachandran and Sandra Blakeslee</li>
-</ul>
-
 Fiction:
 <ul> 
 <li> The Immortals of Meluha, Amish Tripathi </li>
 <li> The Secret of Nagas, Amish Tripathi </li>
 <li> The Oath of Vayuputras, Amish Tripathi </li>
 <li> The Complete Sherlock Holmes, Arthur Canon Doyle </li>
+</ul>
+
+General: 
+<ul> 
+<li> Deep Thinking, Garry Kasparov</li>
+<li> Phantoms in the brain, V. S. Ramachandran and Sandra Blakeslee</li>
 </ul>
 
 </body></html>
