rm-ing link to hsm2

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -110,7 +110,8 @@ p
 	<li> Theoretical and Numerical Combustion by Thierry Poinsot and Denis Veynante, 2016 (TP)</li>
 	<li> <a href="https://www.itv.rwth-aachen.de/fileadmin/Downloads/Summerschools/SummerSchool.pdf" target="_blank">Ercoftac Summer school, Norbert Perters, 1992 (NP)</a></li>
 	<li> Combustion of liquid sprays, Alan Williams, 1989 (AW)</li>
-	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/q5BbpF31aIEcTjL" target="_blank">Understanding clean energy and fuels from biomass, H. S. Mukunda (HSM2)</a> </li>
+	<li> Understanding clean energy and fuels from biomass, H. S. Mukunda (HSM2)</li>
+	<!-- <a href="https://owncloud.iitm.ac.in/index.php/s/q5BbpF31aIEcTjL" target="_blank">Understanding clean energy and fuels from biomass, H. S. Mukunda (HSM2)</a> -->
 </ul>
 </tr>
 </table>
