module 4 practice problems added

--- a/logger/books.html
+++ b/logger/books.html
@@ -40,7 +40,7 @@ I am no avid reader, but here is a non-exhaustive list of books that I have read
 <br><br><br>
 
 
-Auto-biography: 
+Biography: 
 <ul> 
 <li>The Man who knew infinity, Robert Kanigel</li>
 </ul>
