--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,13 +202,14 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
+	<li>2/10: Module 4: Practice problems added
 	<li>30/9: Module 4: Lecture summary complete
 	<li>26/9: Module 4: Lecture summary, reading from CB added
 </ul>
 <button class="collapsible"><h5>View older announcements</h5></button> 
 <div class="content">
 <ul>
-	<li>24/9: Practice problems on ideal gas and mixtures added
+	<li>24/9: Practice problems on ideal gas and mixtures, steam-water added
 	<li>24/9: Module 3: Lecture summary updated
 	<li>17/9: Module 3: reading from CB added, lecture summary updated
 	<li>17/9: Practice problems on first law added (see header of Module 2) </li>
@@ -277,7 +278,7 @@ Updates/Announcements:</font></h3>
 <h5>Module 4: First law of thermodynamics for flow processes  </h3> 
 </button> 
 <div class="content"> -->
-<h3>Module 4: First law of thermodynamics for flow processes  <a href="https://owncloud.iitm.ac.in/index.php/s/2S1EKgnyf1xZcxc" target="_blank">Lecture Summary</a> </h3>
+<h3>Module 4: First law of thermodynamics for flow processes  <a href="https://owncloud.iitm.ac.in/index.php/s/2S1EKgnyf1xZcxc" target="_blank">Lecture Summary</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/Pvw9Uq2PXWzopFI" target="_blank">Practice Problems</a></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -292,7 +293,7 @@ Updates/Announcements:</font></h3>
 
 <button class="collapsible"><h5>Module 5: Second law for heat engines</h5></button> 
 <div class="content">
-<!-<h3>Module 5: Second law for heat engines </h3>--
+<!--<h3>Module 5: Second law for heat engines </h3>-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -307,7 +308,7 @@ Updates/Announcements:</font></h3>
 
 <button class="collapsible"><h5>Module 6: Second law for processes</h5></button> 
 <div class="content">
-<!-<h3>Module 6: Second law for processes </h3>->
+<!--<h3>Module 6: Second law for processes </h3>-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -320,7 +321,7 @@ Updates/Announcements:</font></h3>
 
 <button class="collapsible"><h5>Module 7: Thermodynamic cycles</h5></button> 
 <div class="content">
-<!-<h3>Module 7: Thermodynamic cycles </h3>->
+<!--<h3>Module 7: Thermodynamic cycles </h3>-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
