--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,7 +202,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
-	<li>4/10: Piazza for class discussion: check enrollment invite on smail. Post your questions to the entire class on Piazza.
+	<li>4/10: Piazza for class discussion: check invitation to sign up on smail. Post your questions to the entire class on Piazza.
 	<li>2/10: Module 4: Practice problems added
 	<li>30/9: Module 4: Lecture summary complete
 	<li>26/9: Module 4: Lecture summary, reading from CB added
