--- a/index.html
+++ b/index.html
@@ -1137,6 +1137,27 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <ul>
 <!-- <h4>Click each item for more details</h4> -->
 <div id="flip6">
+<li> Praise Noah Johnson, K. Narayanaswamy, "A combined kinetic model for high temperature oxidation of methyl crotonate, methyl butanoate, and n-dodecane, as components of biodiesel surrogate", 12th Asia-Pacific Conference on Combustion, 2019.
+</div>
+<div id="panel6">
+	<ul style="list-style-type:square">
+	<li><a href="https://www.dropbox.com/s/usuksepjeg6j50m/aspacc_praise.pdf?dl=0" target="_blank">Conference proceeding*</a></li>
+</ul>
+</div>	
+<br>
+
+<div id="flip6">
+<li> Shanmugasundaram D., Raghavan V., K. Narayanaswamy, "A compact kinetic model for high temperature oxidation of MMA using DRGEPSA", 12th Asia-Pacific Conference on Combustion, 2019.
+</div>
+<div id="panel6">
+	<ul style="list-style-type:square">
+	<li><a href="https://www.dropbox.com/s/z60gx876dwjfaie/aspacc_shanmug.pdf?dl=0" target="_blank">Conference proceeding*</a></li>
+</ul>
+</div>	
+<br>
+	
+	
+<div id="flip6">
 <li> A. D. Lele, K. Anand, K. Narayanaswamy, "Development of a chemical kinetic mechanism for biodiesel surrogate", 10th U.S. National Combustion Meeting, 2017.
 </div>
 <div id="panel6">
