--- a/index.html
+++ b/index.html
@@ -211,6 +211,29 @@ div.tab button.active {
   border-color: transparent transparent black transparent;
 }
 
+.collapsible {
+  background-color: gray;
+  cursor: pointer;
+  padding: 2px;
+  width: text-width;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 14pt;
+  font-family:"Palatino";
+}
+
+.active, .collapsible:hover {
+  background-color: slategray;
+}
+
+.content {
+  padding: 0 0px;
+  display: none;
+  overflow: hidden;
+  background-color: black;
+}
+
 </style>
 	
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -1133,7 +1156,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <td>
 <h2>Conference proceedings</h2>
 	
-<h4>2017 -- Present</h4>
+<h4>2018 -- Present</h4>
 <ul>
 <!-- <h4>Click each item for more details</h4> -->
 <div id="flip6">
@@ -1155,8 +1178,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 </ul>
 </div>	
 <br>
-	
-	
+		
 <div id="flip6">
 <li> A. D. Lele, K. Anand, K. Narayanaswamy, "Development of a chemical kinetic mechanism for biodiesel surrogate", 10th U.S. National Combustion Meeting, 2017.
 </div>
@@ -1196,7 +1218,8 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 		<li><a href="https://www.dropbox.com/s/bw7rrblrdts934y/Seshadri_2LF_0611.pdf?dl=0" target="_blank">Conference proceeding*</a></li>
 		</ul>
 	</div>
-<br>
+	<br>
+
 </ul>
 </td>
 </tr>
