adding shan aspacc mech files

--- a/index.html
+++ b/index.html
@@ -1175,6 +1175,9 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <div id="panel6">
 	<ul style="list-style-type:square">
 	<li><a href="https://www.dropbox.com/s/z60gx876dwjfaie/aspacc_shanmug.pdf?dl=0" target="_blank">Conference proceeding*</a></li>
+	<li><a href="https://www.dropbox.com/s/4pxxythcaunhjy0/50_mech.inp?dl=0" target="_blank">Chemkin formatted mechanism file</a>
+	<li><a href="https://www.dropbox.com/s/mlyemh67vxq7h3d/50_thermo.dat?dl=0" target="_blank">Thermodynamic data</a></li>
+	<li><a href="https://www.dropbox.com/s/xj4320eoyly6eub/50_trans.dat?dl=0" target="_blank">Transport data</a></li>
 </ul>
 </div>	
 <br>
