--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,14 +202,15 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
-	<li>4/10: Piazza for class discussion: check invitation to sign up on smail. Post your questions to the entire class on Piazza.
-	<li>2/10: Module 4: Practice problems added
-	<li>30/9: Module 4: Lecture summary complete
-	<li>26/9: Module 4: Lecture summary, reading from CB added
+	<li>25/10: Module 5: reading material and practise problems added
 </ul>
 <button class="collapsible"><h5>View older announcements</h5></button> 
 <div class="content">
 <ul>
+	<li>4/10: Piazza for class discussion: check invitation to sign up on smail. Post your questions to the entire class on Piazza.
+	<li>2/10: Module 4: Practice problems added
+	<li>30/9: Module 4: Lecture summary complete
+	<li>26/9: Module 4: Lecture summary, reading from CB added
 	<li>24/9: Practice problems on ideal gas and mixtures, steam-water added
 	<li>24/9: Module 3: Lecture summary updated
 	<li>17/9: Module 3: reading from CB added, lecture summary updated
@@ -292,19 +293,19 @@ Updates/Announcements:</font></h3>
 <!-- ></div>-->
 <br><br>
 
-<button class="collapsible"><h5>Module 5: Second law for heat engines</h5></button> 
-<div class="content">
-<!--<h3>Module 5: Second law for heat engines </h3>-->
+<!-- <button class="collapsible"><h5>Module 5: Second law for heat engines</h5></button> 
+<div class="content"> -->
+<h3>Module 5: Second law for heat engines <a href="https://owncloud.iitm.ac.in/index.php/s/i75raMWFvC3HTnM" target="_blank">Practice Problems</a></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
-	<tr> <td> Direct and reverse heat engines </td> <td> </td> 
-	<tr> <td> Thermal efficiency</td> <td> </td> 
-	<tr> <td> Reversible processes, internal and external irreversiblity</td> <td> </td> 
-	<tr> <td> Carnot cycle, Absolute temperature scale</td> <td> </td> 
+	<tr> <td> Direct and reverse heat engines, Performance </td> <td> CB $6-3, $6-4 </td> 
+	<tr> <td> Reversible processes, internal and external irreversiblity</td> <td> CB $6-6 </td> 
+	<tr> <td> Carnot cycle, principles, performance </td> <td> CB $6-7, $6-8, $6-10, $6-11</td> 
+	<tr> <td> Absolute temperature scale</td> <td> CB $6-9 </td>	
 	</tr>
 </table>
-</div>
+<!-- </div> -->
 <br><br>
 
 <button class="collapsible"><h5>Module 6: Second law for processes</h5></button> 
