--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -97,7 +97,7 @@ p
 <tr> <td><center> <h2> Jan-May 2020</h2> </center></td> </tr>
 </table> 
 
-<center>For a glimpse of the course content, check out the <a href="../ME6166_Jan_May_2019.html" target="_blank">website for the class offered last time</a>.</center><br>
+<center>For a glimpse of the course content, check out the <a href="./ME6166_Jan_May_2019.html" target="_blank">website for the class offered last time</a>.</center><br>
 
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%"><h3> Suggested Textbooks: </h3>
@@ -163,7 +163,7 @@ Email: varuns@iitm.ac.in </li>
 <td width="50%"> 
 	<h3> Learning Outcomes: </h3>
 	<ul> <li> Thorough understanding of combustion phenomenon involved in different applications </li> 
-		 <li> Ability to design and analyse a combustion device. </li>
+		 <li> Analysis of combustion devices. </li>
 	</ul>
 	
 	<h3> Pre-requisites: </h3>
