--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -308,17 +308,19 @@ Updates/Announcements:</font></h3>
 <!-- </div> -->
 <br><br>
 
-<button class="collapsible"><h5>Module 6: Second law for processes</h5></button> 
-<div class="content">
-<!--<h3>Module 6: Second law for processes </h3>-->
+<!-- <button class="collapsible"><h5>Module 6: Second law for processes</h5></button>  
+<div class="content"> -->
+<h3>Module 6: Second law for processes </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
-	<tr> <td> Entropy change for processes </td> <td> </td>
-	<tr> <td> Isentropic efficiency, Irreversibilty </td> <td> </td> 
+	<tr> <td> Clausius inequality, Entropy </td> <td> CB $7-1, $7-6 </td>
+	<tr> <td> Increase of entropy principle </td> <td> CB $7-2 </td>
+	<tr> <td> Entropy change for processes</td> <td> CB $7-3--$7-5, $7-7--$7-9</td>
+	<tr> <td> Isentropic efficiency </td> <td> CB $7-12</td> 
 	</tr>
 </table>
-</div>
+<!-- </div> -->
 <br><br>
 
 <button class="collapsible"><h5>Module 7: Thermodynamic cycles</h5></button> 
