update log me1100

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,6 +202,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
+	<li>4/11: Module 6: reading materials indicated
 	<li>25/10: Module 5: reading material and practise problems added
 </ul>
 <button class="collapsible"><h5>View older announcements</h5></button> 
