--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,6 +202,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
+	<li>8/11: Module 6: practice problems added
 	<li>4/11: Module 6: reading materials indicated
 	<li>25/10: Module 5: reading material and practise problems added
 </ul>
@@ -311,7 +312,7 @@ Updates/Announcements:</font></h3>
 
 <!-- <button class="collapsible"><h5>Module 6: Second law for processes</h5></button>  
 <div class="content"> -->
-<h3>Module 6: Second law for processes </h3>
+<h3>Module 6: Second law for processes <a href="https://owncloud.iitm.ac.in/index.php/s/hVHWC66HlJ4tAvD" target="_blank">Practice Problems</a></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
