--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -325,9 +325,9 @@ Updates/Announcements:</font></h3>
 <!-- </div> -->
 <br><br>
 
-<button class="collapsible"><h5>Module 7: Thermodynamic cycles</h5></button> 
-<div class="content">
-<!--<h3>Module 7: Thermodynamic cycles </h3>-->
+<!--<button class="collapsible"><h5>Module 7: Thermodynamic cycles</h5></button> 
+<div class="content"> -->
+<h3>Module 7: Thermodynamic cycles </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -337,7 +337,7 @@ Updates/Announcements:</font></h3>
 	</tr>
 </table>
 <center><i>End-semester exam at this stage<i></center>
-</div>
+	<!-- </div> -->
 <br><br>
 
 <script>
