--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -331,9 +331,9 @@ Updates/Announcements:</font></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
-	<tr> <td> Rankine cycle </td> <td> </td> 
-	<tr> <td> Brayton cycle </td> <td> </td> 
-	<tr> <td> Vapor compression cycle </td> <td> </td> 
+	<tr> <td> Rankine cycle </td> <td> CB $10-2--$10-4</td> 
+	<tr> <td> Brayton cycle </td> <td> CB $9-8 </td> 
+	<tr> <td> Vapor compression cycle </td> CB $11-3, $11-4<td> </td> 
 	</tr>
 </table>
 <center><i>End-semester exam at this stage<i></center>
